Css and code fixes. Game page with blurred background.

--- a/css/game-page.css
+++ b/css/game-page.css
@@ -1,5 +1,20 @@
 #playField {
-    overflow: auto;
+    overflow: hidden;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-size: contain;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#canvasWrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: auto;
+    height: 100%;
 }
 
 #playField #exit-now {
