--- a/css/main.css
+++ b/css/main.css
@@ -4,19 +4,13 @@
     overflow: hidden !important;
 }
 
-body {
-    background: url("../images/background.jpg");
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-}
-
 #container {
-    background: url("../images/background.jpg");
+    background: url("../images/background.jpg") no-repeat;
     background-size: 100% 100%;
-    background-repeat: no-repeat;
     position: absolute;
     height: 100%;
     width: 100%;
+
 }
 
 a[title="JavaScript charts"] {
